--- a/real-tests/Makefile
+++ b/real-tests/Makefile
@@ -6,7 +6,7 @@
 #    By: bwan-nan <bwan-nan@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/12/01 11:41:56 by bwan-nan          #+#    #+#              #
-#    Updated: 2018/12/02 23:06:45 by bwan-nan         ###   ########.fr        #
+#    Updated: 2019/01/09 15:12:57 by bwan-nan         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -42,9 +42,7 @@ SRC = 	./stringsplit/00_stringsplit_test_launcher.c \
 		./broken_atoi/02_broken_atoi_buserror_test.c \
 		./Project/broken_atoi.c \
 
-
-
-
+LIBFT = -L ../framework/libft/ -lft
 
 FW_DIR = ../framework/
 FW = $(addprefix $(FW_DIR), libunit.a)
@@ -52,13 +50,19 @@ FW = $(addprefix $(FW_DIR), libunit.a)
 all : $(NAME)
 
 $(NAME):
-	gcc $(FLAGS) $(SRC) $(FW) main.c -o $(NAME)
+	@make -C $(FW_DIR)
+	@gcc $(FLAGS) $(SRC) $(FW) main.c $(LIBFT) -o $(NAME)
+	@echo "\033[1;34mLib test\t\t\033[1;33mCompilation\t\033[0;32m[OK]\033[0m"
 
 clean:
-	/bin/rm -f *.o
+	@make clean -C $(FW_DIR)
+	@/bin/rm -f *.o
+	@echo "\033[1;34mLib test\t\t\033[1;33mCleaning obj\t\033[0;32m[OK]\033[0m"
 
 fclean: clean
-	/bin/rm -f $(NAME)
+	@make fclean -C $(FW_DIR)
+	@/bin/rm -f $(NAME)
+	@echo "\033[1;34mLib test\t\t\033[1;33mCleaning lib\t\033[0;32m[OK]\033[0m"
 
 re: fclean all
 
